<resources>
    <string name="app_name">Meta Corporation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="televisi">TV</string>
    <string name="berita">Berita</string>
    <string name="beranda">Home</string>
    <string name="tentang">Tentang</string>
    <string name="radio">Radio</string>
    <string name="top_programtv">Top Program TV</string>
    <string name="top_programradio">Top Program Radio</string>
    <string name="announcer">Announcer</string>
    <string name="our_program">Our Program</string>
    <string name="presenter">Presenter</string>
    <string name="about_us">About Us</string>
    <string name="deskripsi_about_us">\t\t\tMETA memiliki makna Perubahan, yang menjurus ke perubahan sistem dan inovasi yang terjadi saat ini. dimaksudkan penggunaan kata ‘META’ ini dapat memberikan perubahan / perkembangan baik pada zaman saat ini. dari situlah muncul adaptasi untuk industri penyiaran saat ini, serta berkontribusi memberikan program siaran yang bermanfaat bagi masyarakat saat ini.
        \n\n\t\t\tMeta korporasi yang menaungi tiga departemen akan menjadi sebuah pondasi kuat yang nantinya tetap memberikan perkembangan serta perbaikan pada simulasi tahun ini. Pada simulasi kali ini mengusung tema “Optimis memasuki New Normal” yang dilatarbelakangi oleh kondisi Indonesia yang saat ini sedang dilanda kasus covid-19 yg masih belum selesai.
        \n\n\t\t\tNama Meta yang bermakna perubahan, semoga bisa memberikan perkembangan atau perbaikan pada zaman menuju tatanan baru nantinya dengan menyajikan program yang inspiratif,edukatif, serta inovatif pada hasil siaran yang diberikan kepada masyarakat.
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_description"><b>Meta Corporation\n<br/>
        Sekolah Tinggi Multi Media “MMTC” Yogyakarta
    </b>\n\n<br/><br/>Jl. Magelang No.KM.6, Kutu Patran, Sinduadi, Mlati,
        Kabupaten Sleman, Daerah Istimewa Yogyakarta – 55284</string>
    <string name="toast_double_back">Tekan sekali lagi untuk mengeluarkan</string>
    <string name="youtube_live_tv">awWVru0nwMY</string>
    <string name="youtube_live_radio">2cP4sE5l-B8</string>
    <string name="twitter">Twitter</string>
    <string name="link_twitter">https://www.twitter.com/metacorp_id</string>
    <string name="instagram">Instagram</string>
    <string name="link_instagram">https://www.instagram.com/metacorp_id</string>
    <string name="tiktok">Tiktok</string>
    <string name="link_tiktok">https://www.tiktok.com/@metacorp_id</string>
    <string name="link_linkedin">https://www.linkedin.com/company/meta-corporation-2021</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="pembawa_acara">PENGISI ACARA</string>
    <string name="daftar_kru">DAFTAR KRU</string>
    <string name="meta_corporation">META CORPORATION</string>
    <string name="media_partner">MEDIA PARTNER</string>
    <string name="sponsor">SPONSOR</string>
    <string name="credit_title">CREDIT TITLE</string>
    <string name="streaming_tv">STREAMING TV</string>
    <string name="streaming_radio">STREAMING RADIO</string>
    <string name="jadwal_nsiaran">JADWAL\nSIARAN</string>
    <string name="program_tv">PROGRAM TV</string>
    <string name="program_radio">PROGRAM RADIO</string>
    <string name="live_chat">LIVE CHAT</string>
    <string name="link_news">https://news.metacorporation.id</string>
    <string name="program_tv_lainnya">PROGRAM TV LAINNYA</string>
    <string name="program_radio_lainnya">PROGRAM RADIO LAINNYA</string>
    <string name="link_chat_tv">https://minnit.chat/METACORP?embed</string>
    <string name="link_chat_radio">https://minnit.chat/METACORP?embed</string>
    <string name="meta_tv_live_name">META TV LIVE STREAMING</string>
    <string name="meta_radio_live_name">META RADIO LIVE STREAMING</string>
    <string name="connect_with_us">Connect with Us</string>
    <string name="kontak">Kontak</string>
    <string name="terima_kasih">TERIMA KASIH</string>
    <string name="koneksi_buruk_dialog">Terdapat indikasi jaringan terputus. Silahkan periksa kembali koneksi Anda! Lalu buka ulang aplikasi!</string>
</resources>