<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AboutFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <ImageView
        android:id="@+id/logomedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:layout_margin="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/iv_on_title"
                android:layout_height="@dimen/iv_on_title"
                android:src="@drawable/ic_launcher_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textStyle="bold"
                android:textSize="@dimen/text_title_size"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_about_us"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/iv_icon_sosmed"
                android:layout_height="@dimen/iv_icon_sosmed"
                android:layout_margin="@dimen/margin_icon_sosmed"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:layout_width="@dimen/iv_icon_sosmed"
                android:layout_height="@dimen/iv_icon_sosmed"
                android:layout_margin="@dimen/margin_icon_sosmed"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:layout_width="@dimen/iv_icon_sosmed"
                android:layout_height="@dimen/iv_icon_sosmed"
                android:layout_margin="@dimen/margin_icon_sosmed"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:layout_width="@dimen/iv_icon_sosmed"
                android:layout_height="@dimen/iv_icon_sosmed"
                android:layout_margin="@dimen/margin_icon_sosmed"
                android:src="@mipmap/ic_launcher"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/iv_on_title"
                android:layout_height="@dimen/iv_on_title"
                android:src="@drawable/ic_launcher_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textStyle="bold"
                android:textSize="@dimen/text_title_size"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_description"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_sponsor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="40dp"
                android:layout_margin="5dp"
                android:text="Sponsor"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_mediapartner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="40dp"
                android:layout_margin="5dp"
                android:text="Media Partner"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>