<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="id.metacorporation.fragment.RadioFragment"
    android:orientation="vertical">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/syncopate_bold"/>
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtubeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:enableLiveVideoUi="true"
            app:enableAutomaticInitialization="false"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_margin_start"
                    android:text="@string/our_program"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_title_size"
                    />
                <id.metacorporation.utils.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_our_programradio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        tools:listitem="@layout/program_layout"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:itemCount="3"/>
                </id.metacorporation.utils.NestedScrollableHost>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_margin_start"
                    android:text="@string/announcer"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_title_size"
                    />
                <id.metacorporation.utils.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_presenter_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/program_layout"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        tools:itemCount="3"/>
                </id.metacorporation.utils.NestedScrollableHost>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>