<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pallet_white"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/meta_corporation_colored_black"
            />
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/syncopate_bold"/>-->
    </Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height_size"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:src="@drawable/ic_launcher_background"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <id.metacorporation.utils.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/banner_program"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="@color/pallet_red"
                        app:sliderIndicatorUnselectedColor="@color/pallet_white"
                        app:sliderScrollTimeInSec="1"
                        app:sliderStartAutoCycle="true"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="always"
                        />

                </id.metacorporation.utils.NestedScrollableHost>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/pallet_white"
                    android:padding="@dimen/_25sdp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:id="@+id/btStreamTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/streaming_tv"
                            android:textColor="@color/pallet_gray"
                            app:strokeColor="@color/pallet_gray"
                            app:strokeWidth="@dimen/_2sdp"
                            app:cornerRadius="0dp"
                             />
                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:id="@+id/btStreamRadio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/streaming_radio"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/pallet_gray"
                            app:strokeColor="@color/pallet_gray"
                            app:strokeWidth="@dimen/_2sdp"
                            app:cornerRadius="0dp"/>
                    </LinearLayout>
                    <!--<TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tv_margin_start"
                        android:fontFamily="sans-serif"
                        android:text="@string/top_programtv"
                        android:textSize="@dimen/text_title_size"
                        android:textStyle="bold" />
                    <id.metacorporation.utils.NestedScrollableHost
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_top_programtv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/program_layout"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:itemCount="3"/>
                    </id.metacorporation.utils.NestedScrollableHost>-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/pallet_gray"
                    android:padding="@dimen/_20sdp"

                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal_nsiaran"
                        android:textSize="@dimen/_15sdp"
                        android:textAlignment="center"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:fontFamily="@font/syncopate_bold"
                        android:textColor="#B90D27"/>

                    <!--
                        TODO:Layout jadwal
                    -->
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/spinner_jadwal_layout"
                        android:spinnerMode="dropdown"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:popupBackground="@color/pallet_gray"

                        />
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="SELASA 10 NOV"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/pallet_white"
                        app:strokeColor="@color/pallet_white"
                        app:strokeWidth="@dimen/_2sdp"
                        app:cornerRadius="0dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/_10sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:letterSpacing="0.2"
                            android:text="@string/program_tv"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="#F9CF00"
                            android:textStyle="italic" />
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_jadwal_programtv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/jam_program_layout"
                            tools:itemCount="5"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/_10sdp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/program_radio"
                            android:textSize="@dimen/_15sdp"
                            android:fontFamily="@font/montserrat_bold"
                            android:letterSpacing="0.2"
                            android:textColor="#F9CF00"
                            android:textStyle="italic"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/rv_jadwal_programradio"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/jam_program_layout"
                            tools:itemCount="5"
                            android:nestedScrollingEnabled="false"

                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#F9CF00"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="BERITA UTAMA"
                        android:textColor="#B90D27"
                        android:fontFamily="@font/syncopate_bold"
                        android:textSize="@dimen/_15sdp"
                        />
                    <id.metacorporation.utils.NestedScrollableHost
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <id.metacorporation.utils.SixTeenByNineFrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="@dimen/_20sdp"
                                android:layout_marginTop="@dimen/_10sdp">

                                <com.smarteist.autoimageslider.SliderView
                                    android:id="@+id/bannerBerita"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    app:sliderAnimationDuration="600"
                                    app:sliderAutoCycleDirection="back_and_forth"
                                    app:sliderAutoCycleEnabled="true"
                                    app:sliderIndicatorAnimationDuration="600"
                                    app:sliderIndicatorGravity="center_horizontal|bottom"
                                    app:sliderIndicatorMargin="15dp"
                                    app:sliderIndicatorOrientation="horizontal"
                                    app:sliderIndicatorPadding="3dp"
                                    app:sliderIndicatorRadius="2dp"
                                    app:sliderIndicatorSelectedColor="#5A5A5A"
                                    app:sliderIndicatorUnselectedColor="#FFF"
                                    app:sliderScrollTimeInSec="1"
                                    app:sliderStartAutoCycle="true"
                                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                                    android:nestedScrollingEnabled="false"
                                    android:overScrollMode="never"
                                    />
                            </androidx.cardview.widget.CardView>
                        </id.metacorporation.utils.SixTeenByNineFrameLayout>

                    </id.metacorporation.utils.NestedScrollableHost>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"/>
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tv_margin_start"
                        android:text="@string/top_programradio"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_title_size"
                        />
                    <id.metacorporation.utils.NestedScrollableHost
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_top_programradio"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:listitem="@layout/program_layout"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:itemCount="3"/>
                    </id.metacorporation.utils.NestedScrollableHost>

                </LinearLayout>-->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>



</LinearLayout>